name:                servant-chat
version:             0.1.0.0
homepage:            https://github.com/radio-alice/servant-chat#readme
license:             BSD3
license-file:        LICENSE
author:              Zach Sherman
maintainer:          zach@anemon.es
copyright:           2019 Zach Sherman
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable servant-chat-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Api
                     , App
                     , Models
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >=4.8 && <4.11
                     , aeson
                     , monad-logger
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010

test-suite servant-chat-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-chat
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/radio-alice/servant-chat
